--- a/.gitignore
+++ b/.gitignore
@@ -226,5 +226,6 @@ $RECYCLE.BIN/
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 
+.node_modules
 
 # End of https://www.gitignore.io/api/node,macos,linux,windows,webstorm,visualstudiocode
